--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=AnhNBTProject
 APP_ENV=local
-APP_KEY=base64:Wx+mgaT5q118AFe/Y/MgVnWev/hM0yc2mkHo4d3zGNM=
+APP_KEY=base64:RagLgTfrLW+M/u6ImyQrlFaJnhGq6UzG5v12OHOuY18=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel_db
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=KhoaiTay@2019
 DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
